<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.projects.stonedcoder.healthydietquizexample.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/QuestionText"
            android:text="@string/welcomeMsg"
            android:textAlignment="center"/>

        <EditText
            style="@style/AnswerText"
            android:id="@+id/name"
            android:inputType="textCapWords"
            android:hint="@string/name"/>

        <EditText
            style="@style/AnswerText"
            android:inputType="numberDecimal"
            android:id="@+id/weightInput"
            android:hint="@string/weight"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:shadowColor="@color/colorAccent"
            android:text="@string/calculate"
            android:textAllCaps="false"
            android:id="@+id/calculate"/>

        <TextView
            style="@style/AnswerText"
            android:id="@+id/waterAnswer"
            android:text="@string/weightWaterMsg"/>

        <TextView
            style="@style/QuestionText"
            android:text="@string/waterQuestion"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radioYes"
                android:onClick="radioYesClicked"/>

            <RadioButton
                android:id="@+id/radio_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radioNo"
                android:onClick="radioNoClicked"/>

        </RadioGroup>

        <TextView
            style="@style/QuestionText"
            android:text="@string/chooseProducts"/>

        <CheckBox
            style="@style/ListText"
            android:id="@+id/vegetables"
            android:text="@string/vegetables"/>
        <CheckBox
            style="@style/ListText"
            android:id="@+id/fruits"
            android:text="@string/fruits"/>
        <CheckBox
            style="@style/ListText"
            android:id="@+id/ff"
            android:text="@string/fastFood"/>
        <CheckBox
            style="@style/ListText"
            android:id="@+id/bread"
            android:text="@string/bread"/>
        <CheckBox
            style="@style/ListText"
            android:id="@+id/milk"
            android:text="@string/dairy"/>
        <CheckBox
            style="@style/ListText"
            android:id="@+id/meat"
            android:text="@string/meat"/>
        <CheckBox
            style="@style/ListText"
            android:id="@+id/fish"
            android:text="@string/fish"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="100dp"
            android:layout_marginLeft="100dp"
            android:shadowColor="@color/colorAccent"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:id="@+id/submitButton"
            android:textAlignment="center"
            />

    </LinearLayout>


</ScrollView>
